@@ -24,6 +24,7 @@
 
 package hudson.model;
 
+import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.StringEndsWith.endsWith;
 import static org.junit.Assert.assertEquals;
@@ -58,9 +59,9 @@ import hudson.util.TagCloud;
 import java.net.HttpURLConnection;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.GregorianCalendar;
 import java.util.List;
+import java.util.Map;
 import jenkins.model.Jenkins;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
 import org.junit.Before;
@@ -112,23 +113,22 @@ public class NodeTest {
         OfflineCause.UserCause cause;
 
         final User someone = User.getOrCreateByIdOrFullName("someone@somewhere.com");
-        ACL.impersonate2(someone.impersonate2());
-
-        computer.doToggleOffline("original message");
-        cause = (OfflineCause.UserCause) computer.getOfflineCause();
-        assertTrue(cause.toString(), cause.toString().matches("^.*?Disconnected by someone@somewhere.com : original message"));
-        assertEquals(someone, cause.getUser());
-
+        try (ACLContext ignored = ACL.as2(someone.impersonate2())) {
+            computer.doToggleOffline("original message");
+            cause = (OfflineCause.UserCause) computer.getOfflineCause();
+            assertTrue(cause.toString(), cause.toString().matches("^.*?Disconnected by someone@somewhere.com : original message"));
+            assertEquals(someone, cause.getUser());
+        }
         final User root = User.getOrCreateByIdOrFullName("root@localhost");
-        ACL.impersonate2(root.impersonate2());
+        try (ACLContext ignored = ACL.as2(root.impersonate2())) {
+            computer.doChangeOfflineCause("new message");
+            cause = (OfflineCause.UserCause) computer.getOfflineCause();
+            assertTrue(cause.toString(), cause.toString().matches("^.*?Disconnected by root@localhost : new message"));
+            assertEquals(root, cause.getUser());
 
-        computer.doChangeOfflineCause("new message");
-        cause = (OfflineCause.UserCause) computer.getOfflineCause();
-        assertTrue(cause.toString(), cause.toString().matches("^.*?Disconnected by root@localhost : new message"));
-        assertEquals(root, cause.getUser());
-
-        computer.doToggleOffline(null);
-        assertNull(computer.getOfflineCause());
+            computer.doToggleOffline(null);
+            assertNull(computer.getOfflineCause());
+        }
     }
 
     @Test
@@ -213,7 +213,7 @@ public class NodeTest {
         node.getNodeProperties().add(new NodePropertyImpl());
         notTake = true;
         assertNotNull("Node should not take project because node property does not allow it.", node.canTake(item));
-        assertTrue("Cause of blockage should be busy label.", node.canTake(item) instanceof CauseOfBlockage.BecauseLabelIsBusy);
+        assertThat("Cause of blockage should be busy label.", node.canTake(item), instanceOf(CauseOfBlockage.BecauseLabelIsBusy.class));
         User user = User.get("John");
         GlobalMatrixAuthorizationStrategy auth = new GlobalMatrixAuthorizationStrategy();
         j.jenkins.setAuthorizationStrategy(auth);
@@ -222,7 +222,7 @@ public class NodeTest {
         j.jenkins.setSecurityRealm(realm);
         realm.createAccount("John", "");
         notTake = false;
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap(project.getFullName(), user.impersonate())));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(project.getFullName(), user.impersonate())));
         assertNotNull("Node should not take project because user does not have build permission.", node.canTake(item));
         message = Messages._Node_LackingBuildPermission(item.authenticate2().getName(), node.getNodeName()).toString();
         assertEquals("Cause of blockage should be build permission label.", message, node.canTake(item).getShortDescription());
