@@ -66,10 +66,10 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 import jenkins.model.IdStrategy;
 import jenkins.model.Jenkins;
 import jenkins.security.ApiTokenProperty;
-import jenkins.security.apitoken.ApiTokenTestHelper;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -514,8 +514,6 @@ public class UserTest {
     @Test
     // @Issue("SECURITY-180")
     public void security180() throws Exception {
-        ApiTokenTestHelper.enableLegacyBehavior();
-
         final GlobalMatrixAuthorizationStrategy auth = new GlobalMatrixAuthorizationStrategy();
         j.jenkins.setAuthorizationStrategy(auth);
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
@@ -622,7 +620,7 @@ public class UserTest {
                 } catch (IOException x) {
                     throw new RuntimeException(x);
                 }
-                return new org.springframework.security.core.userdetails.User(canonicalName, "", true, true, true, true, Collections.singleton(AUTHENTICATED_AUTHORITY2));
+                return new org.springframework.security.core.userdetails.User(canonicalName, "", true, true, true, true, Set.of(AUTHENTICATED_AUTHORITY2));
             }
         }
 
